# hdp4cms

./: .gitignore  CMakeLists.txt  README.md  softlink2cmssw.sh
cmake/modules/: FindNVVM.cmake
dataformats/: CMakeLists.txt
dataformats/raw_fed/: CMakeLists.txt
dataformats/raw_fed/conf/: LinkDef.h
dataformats/raw_fed/interface/: FEDRawData.h  FEDRawDataCollection.h  edm__ViewTypeChecker.h  edm__WrapperBase.h  edm__Wrapper_FEDRawDataCollection_.h  fed_header.hpp  raw_buffer.hpp
dataformats/raw_hcal/: BuildFile.xml  CMakeLists.txt
dataformats/raw_hcal/interface/: amc13header.hpp  channel_data.hpp  digi_collection.hpp  module_header.hpp  uhtr_data.hpp
dataformats/raw_hcal/src/: dummy.cpp
dataformats/raw_pixel/: CMakeLists.txt
dataproc/: CMakeLists.txt
dataproc/conf/: LinkDef.h
dataproc/interface/: FEDRawData.h  FEDRawDataCollection.h  edm__ViewTypeChecker.h  edm__WrapperBase.h  edm__Wrapper_FEDRawDataCollection_.h
docs/: raw_format_specs.md
execs/: CMakeLists.txt
execs/raw2digi/: CMakeLists.txt
execs/raw2digi/kernels/: hcal_funcs.c  hcal_funcs.cl
execs/raw2digi/src/: dump_cmsraw.cpp  unpack_cmsraw.cpp  unpack_cmsraw_opencl.cpp
execs/test_arrayfire/: CMakeLists.txt
execs/test_arrayfire/src/: main0.cpp
execs/test_cuda/: CMakeLists.txt
execs/test_cuda/interface/: helper_cuda.h  test_kernels0.h
execs/test_cuda/src/: deviceQuery.cpp  main0.cpp  test_kernels0.cu  test_vadd.cpp
execs/test_cuda_eigen/: CMakeLists.txt
execs/test_cuda_eigen/interface/: test_eigen_kernels0.h  test_kernels0.h
execs/test_cuda_eigen/src/: test_eigen_kernels0.cu  test_eigen_matrixops.cpp  test_eigen_vadd.cpp  test_eigen_vectorops.cpp  test_kernels0.cu  test_vadd.cpp
execs/test_eigen/: CMakeLists.txt
execs/test_eigen/src/: main0.cpp  main1.cpp
execs/test_opencl/: CMakeLists.txt
execs/test_opencl/src/: def.h  test0.cpp  test1.cpp  vadd.cl  vadd.cpp
raw2digi/: CMakeLists.txt
raw2digi/common/: CMakeLists.txt
raw2digi/common/interface/: dump_raw.hpp  fed_numbering.hpp
raw2digi/common/src/: dump_raw.cpp  fed_numbering.cpp
raw2digi/ecal/: CMakeLists.txt
raw2digi/ecal/interface/: unpack.hpp
raw2digi/ecal/src/: unpack.cpp
raw2digi/hcal/: BuildFile.xml  CMakeLists.txt
raw2digi/hcal/interface/: unpack.hpp  unpack_utca.hpp
raw2digi/hcal/src/: unpack.cpp  unpack_utca.cpp
raw2digi/pixel/: CMakeLists.txt
raw2digi/pixel/interface/: unpack.hpp
raw2digi/pixel/src/: unpack.cpp
skimprod/plugins/: BuildFile.xml  getraw.cc
skimprod/python/: CfiFile_cfi.py  ConfFile_cfg.py  __init__.py  cfg_hcal_collisions.py
